# jp-web-novel-editor

./: .gitignore  Cargo.toml  package-lock.json
assets/: main.scss  tailwind.css
src/: app.rs
src/novel/: mod.rs  novel_input.rs  novel_view.rs
