[package]
name = "jp-web-novel-editor"
version = "0.1.0"
authors = ["qwerty2501 <939468+qwerty2501@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.7", features = [] }
gloo-timers = "0.3.0"
jp-web-novel-text = { git = "https://github.com/qwerty2501/jp-web-novel-text.git", branch = "main" }
wasm-bindgen = "0.2.120"
web-sys = "0.3.97"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
